--- a/web/css/shop/themes/base/style.css
+++ b/web/css/shop/themes/base/style.css
@@ -3666,7 +3666,10 @@ footer .bottom .footer_site_info a {
 
 #basket_popup_list .item_in_basket a .image {
     width: 50px;
-    height: 50px
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #basket_popup_list .item_in_basket a .image img, #basket_popup_wrapper #basket_popup .item_in_basket .image img {
