--- a/web/css/shop/themes/base/style.css
+++ b/web/css/shop/themes/base/style.css
@@ -4525,6 +4525,51 @@ a.category .title {
     font-weight: 400;
     width: 100%
 }
+ul.pagination {
+    display: inline-block;
+    padding-left: 0;
+    margin: 20px 0;
+    border-radius: 4px;
+}
+
+ul.pagination li {
+    display: inline;
+}
+
+ul.pagination li a {
+    color: #337ab7;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    border: 1px solid #ddd;
+    margin-left: -1px;
+}
+
+ul.pagination li.active a {
+    background-color: #337ab7;
+    color: white;
+    border-color: #337ab7;
+}
+
+ul.pagination li a:hover:not(.active) {
+    background-color: #f5f5f5;
+}
+
+ul.pagination li.prev,
+ul.pagination li.next {
+    margin: 0;
+}
+
+ul.pagination li.prev a,
+ul.pagination li.next a {
+    padding: 8px 10px;
+}
+
+ul.pagination li.prev a:hover,
+ul.pagination li.next a:hover {
+    background-color: #ddd;
+}
+
 
 .error_wrapp {
     padding: 20px;
